Bugfix: error messages where not showing at the module config page.

--- a/themes/_administration/style.css
+++ b/themes/_administration/style.css
@@ -18,4 +18,3 @@
 #fancy_treeview-config .edit_page_link select {margin-left:20px}
 #fancy_treeview-config .default_link {font-size:11px; padding-left:10px}
 #fancy_treeview-config input[type="submit"] {margin-left:0;margin-top:0.5em}
-#fancy_treeview-config #error {display:none}
